kubernetes/apps/elastic-stack/elasticsearch/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: es-ingress
  namespace: elastic-stack
  labels:
    elasticsearch.k8s.elastic.co/instance: es
spec:
  rules:
    - host: elasticsearch.home.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: es-es-http
                port:
                  number: 9200
